ASSERT_NOT_REACHED was touched in WebCore::SVGAnimatedType::valueAsString https://bugs.webkit.org/show_bug.cgi?id=118744

Reviewed by Philip Rogers.

Source/WebCore:

If we have an <animateTransform> tag that sets the attributeName and attributeType
properties however they are not consistent and we shouldn't try to apply it.
It is already checked and catched in SVGAnimateElement::resetAnimatedType() but
DontApplyAnimation case isn't handled properly. The patch forces an early return
in this case.

Test: svg/animations/attributeNameAndAttributeTypeMissmatch.svg

* svg/SVGAnimateElement.cpp:
(WebCore::SVGAnimateElement::resetAnimatedType):

LayoutTests:

Adding test to check whether attributeName and attributeType are consistent in <animateTransform>.

* platform/qt/svg/animations/attributeNameAndAttributeTypeMissmatch-expected.txt: Added.
* svg/animations/attributeNameAndAttributeTypeMissmatch.svg: Added.

Canonical link: https://commits.webkit.org/137204@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@153433 268f45cc-cd09-0410-ab3c-d52691b4dbfc